--- a/naver-top.vcxproj.filters
+++ b/naver-top.vcxproj.filters
@@ -18,18 +18,15 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
+    <ClInclude Include="winhttpget.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
+    <ClCompile Include="naver-top.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="naver-top.cpp">
+    <ClCompile Include="winhttpget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
